# NadaLisp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-test.yml
include/: NadaBuiltinMath.h  NadaBuiltinPredicates.h  NadaBuiltinSpecialForms.h  NadaEnv.h  NadaError.h  NadaEval.h  NadaJupyter.h  NadaLisp.h  NadaNum.h  NadaOutput.h  NadaParser.h  NadaString.h  NadaValue.h
jupyter_kernel/: CMakeLists.txt  install_kernel.py  kernel.py  nada_kernel.py  nada_notebook_example.ipynb  pyproject.toml  test_kernel.py
lib/: CMakeLists.txt  NadaBuiltinCompare.h  NadaBuiltinLists.h  NadaBuiltinPredicates.h  NadaConfig.c  NadaEnv.c  NadaParser.c  NadaParser.h  NadaValue.h
nadalib/: CMakeLists.txt  NadaBuiltinBoolOps.c  NadaBuiltinCompare.c  NadaBuiltinIO.c  NadaBuiltinLists.c  NadaBuiltinMath.c  NadaBuiltinPredicates.c  NadaBuiltinSpecialForms.c  NadaConfig.c  NadaEnv.c  NadaError.c  NadaEval.c  NadaJupyter.c  NadaNum.c  NadaOutput.c  NadaParser.c  NadaString.c  NadaValue.c  testing.scm
nadalib_std/: CMakeLists.txt  algebraic.scm  algebraic_parse.scm  lists.scm  stdlib.scm  testing.scm
repl/: CMakeLists.txt  NadaLisp.c
src/: CMakeLists.txt  NadaBuiltinBoolOps.c  NadaBuiltinBoolOps.h  NadaBuiltinCompare.c  NadaBuiltinCompare.h  NadaBuiltinIO.h  NadaBuiltinLists.c  NadaBuiltinMath.c  NadaBuiltinMath.h  NadaBuiltinPredicates.c  NadaBuiltinPredicates.h  NadaBuiltinSpecialForms.c  NadaBuiltinSpecialForms.h  NadaConfig.c  NadaConfig.h  NadaEnv.c  NadaEnv.h  NadaError.c  NadaError.h  NadaEval.c  NadaEval.h  NadaLisp.c  NadaNum.c  NadaParser.c  NadaString.c  NadaString.h  NadaValue.c  NadaValue.h
src/nadalib/: algebraic.lisp  lists.lisp  testing.scm
tests/: CMakeLists.txt  run_lisp_tests.c  run_single_test.sh.in  test_io.c  test_list.c  test_math.c  test_runner.c  test_runner.h  test_string.c
tests/lisp_tests/: algebraic_new_stuff.scm  algebraic_tests.scm  algo_mem_fails.scm  apply_map_tests.scm  bracket_tests.scm  builtin_tests.scm  comparison_tests.lisp  comparison_tests.scm  control_flow_tests.lisp  core_tests.lisp  core_tests.scm  list_tests.scm  lists_and_variadic_tests.scm  math_tests.lisp  math_tests.scm  nested_tests.scm  numeric_tests.scm  predicate_tests.lisp  special_forms_for_each.scm  special_forms_lambda_closure.scm  special_forms_let_loop.scm  special_forms_named_let.scm  special_forms_tests.scm  stdlib_tests.scm  string_tests.lisp  string_tests.scm  undef.scm
tests/memory_tests/: leak_test.c  leak_test.sh.in  leak_test_single.sh.in
tests/memory_tests/test_scripts/: basic.lisp  basic.scm  basic_ops.lisp  basic_ops.scm  recursion.lisp  recursion.scm
tests/unused_tests/: algebraic_new_stuff.scm  algebraic_tests.scm  complex_tests.scm  io_tests.scm  list_tests.scm  map_apply_subset.scm  rational_tests.scm  special_forms_tests.scm  undef.scm
